--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
 *{
     color: blue;
 }
+
+ul>li{
+    color: black;
+    list-style-type: square;
+}
+img{
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+}
